# ChoiceStory

./: CMakeLists.txt  CMakeLists.txt.bak  ChoiceStory.cpp  ChooseFile.cpp  LICENSE.md  README.md  ReadStory.cpp  defaultstory.h  littlefs_driver.c  main.cpp
badger2040/: CMakeLists.txt  README.md  library.json
include/: ChooseFile.hpp  ReadStory.hpp  bootsel_button.h  mimic_fat.h  tusb_config.h  unicode.h
lib/badger2040/: CMakeLists.txt  library.json
tests/: CMakeLists.txt  test_create.c  test_rename.c  test_update.c  util.c
